--- a/css/card.css
+++ b/css/card.css
@@ -12,6 +12,8 @@
 
 .packs {
   position: absolute;
+  align-items: center;
+  align-content: center;
   display: flex;
   margin-left: auto;
   margin-right: auto;
