--- a/css/card.css
+++ b/css/card.css
@@ -7,7 +7,8 @@
   height: 600px;
   margin-left: 10px;
   margin-right: 10px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
+  /* Remove this if you don't want the 3D effect */
 }
 
 .packs {
@@ -15,6 +16,7 @@
   align-items: center;
   align-content: center;
   display: flex;
+  padding-top: 3cm;
   margin-left: auto;
   margin-right: auto;
 
@@ -42,10 +44,14 @@
 }
 
 /* Style the front side (fallback if image is missing) */
-.card-front {
-}
+
 
 /* Style the back side */
 .card-back {
   transform: rotateY(180deg);
+}
+
+.data {
+  margin-left: 5cm;
+  margin-right: 3cm;
 }
